[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = "0.25.3"
rocket = { version = "0.5.0", features = ["json"] }
uuid = { version = "1.8.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
ws = { package = "rocket_ws", version = "0.1.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
rand = "0.8.5"
tokio = "1.37.0"
