[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = "0.25.3"
uuid = { version = "1.8.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
rand = "0.8.5"
warp = "0.3.7"
dashmap = "5.5.3"
anyhow = "1.0.82"
log = "0.4.21"
parking_lot = "0.12.2"
futures = "0.3.30"
env_logger = "0.11.3"
